--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.3.5",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "apollo-client": "^2.6.10",
     "bootstrap": "^5.2.2",
     "jwt-decode": "^3.1.2",
@@ -19,5 +23,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
