--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
+    "mongoose-type-phone": "^1.0.1",
     "nodemon": "^2.0.20"
   }
 }
