--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "proxy": "http://localhost:3001",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "keywords": [],
   "author": "",
