--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,10 @@
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
