--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "5.0.1"
   },
   "eslintConfig": {
     "extends": [
